# hyprosd

./: .gitignore  Cargo.toml  LICENSE  README.md
aur/: .SRCINFO  PKGBUILD
scripts/: install.sh  uninstall.sh
src/: config.rs  ipc.rs  main.rs  query.rs  sysfs.rs  ui.rs
src/backends/: brightness.rs  locks.rs  mod.rs  volume.rs
