[package]
name = "hyprosd"
version = "0.2.0"
edition = "2024"
description = "Hyprland-focused Wayland OSD daemon"
repository = "https://github.com/jameswylde/hyprosd"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
clap = { version = "4.5", features = ["derive"] }
gtk4 = "0.7"
gtk4-layer-shell = "0.2"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
